--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "webpack-cli": "^3.0.8"
     },
     "dependencies": {
-        "vue": "^2.5.16"
+        "vue": "^2.5.16",
+        "vuex": "^3.0.1"
     }
 }
