--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --config build/webpack.config.js"
+        "build": "webpack --watch --config build/webpack.config.js"
     },
     "author": "",
     "license": "ISC",
@@ -19,6 +19,7 @@
         "webpack-cli": "^3.0.8"
     },
     "dependencies": {
+        "lodash": "^4.17.10",
         "vue": "^2.5.16",
         "vuex": "^3.0.1"
     }
