--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "webpack-cli": "^3.0.8"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.1.1",
         "lodash": "^4.17.10",
         "vue": "^2.5.16",
         "vuex": "^3.0.1"
