--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
+        "css-loader": "^1.0.0",
+        "style-loader": "^0.21.0",
         "vue-loader": "^15.2.4",
         "vue-template-compiler": "^2.5.16",
         "webpack": "^4.15.1",
@@ -20,6 +22,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.1.1",
+        "bootstrap": "^4.1.2",
         "lodash": "^4.17.10",
         "vue": "^2.5.16",
         "vuex": "^3.0.1"
