--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha --recursive --compilers js:babel-core/register",
         "build": "webpack --watch --config build/webpack.config.js"
     },
     "author": "",
@@ -13,7 +13,9 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
+        "chai": "^4.1.2",
         "css-loader": "^1.0.0",
+        "mocha": "^5.2.0",
         "style-loader": "^0.21.0",
         "vue-loader": "^15.2.4",
         "vue-template-compiler": "^2.5.16",
