--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.1.1",
+        "axios": "^0.18.0",
         "bootstrap": "^4.1.2",
         "lodash": "^4.17.10",
         "ol": "^5.1.3",
